Fix: Overflow in y axis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ html, body {
 @layer base {
   /* Black and White */
   :root {
-    --primary: #CDD8FF;
+    /* --primary: #CDD8FF; */
     --background: #F5F5F5;
     --foreground: #1A1A1A;
     --elavation-one: #1A1A1A1A;
@@ -56,7 +56,7 @@ html, body {
   }
 
   .dark {
-    --primary: #03346E;
+    /* --primary: #03346E; */
     --background: #1E1E1E;
     --foreground: #E5E5E5;
     --elavation-one: #E5E5E51A;
@@ -74,7 +74,7 @@ html, body {
 /* Blue Shade */
 @layer base {
   .blue-theme {
-    --primary: #F5F5F5;
+    /* --primary: #F5F5F5; */
     --background: #CDD8FF;
     --foreground: #03346E;
     --elavation-one: #CDD8FF3A;
@@ -89,7 +89,7 @@ html, body {
   }
 
   .blue-theme.dark {
-    --primary: #0D0D0D;
+    /* --primary: #0D0D0D; */
     --background: #03346E;
     --foreground: #CDD8FF;
     --elavation-one: #03346E3A;
